--- a/my-website/index.html
+++ b/my-website/index.html
@@ -89,3 +89,7 @@
 
   
 </body>
+
+  <footer style="background-color: #f2f2f2; padding: 20px; text-align: center; font-size: 14px;">
+  <p><strong>Disclaimer:</strong> The content provided on this website is for informational purposes only. We do not guarantee the accuracy, completeness, or usefulness of any information presented. Use at your own risk.</p>
+</footer>
