--- a/my-website/index.html
+++ b/my-website/index.html
@@ -78,18 +78,15 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; 2025 My Website. All rights reserved.</p>
+    <p>&copy; Dislaimer. The Website Server has no file on it. Only content from
+    third party websites and services is displayed on this website. We have
+    no control over or endorsement of any of the products, services
+    or material provided by this websites</p>
     <div class="footer-links">
-      <a href="#">Disclaimer</a>
       <a href="#">About Us</a>
       <a href="#">Contact Us</a>
     </div>
   </div>
-</footer>
-<footer style="background-color: #f2f2f2; padding: 20px; text-align: center; font-size: 14px;">
-  <p><strong>Disclaimer:</strong> The content provided on this website is for informational purposes only. 
-    We do not guarantee the accuracy, completeness, or usefulness of any information presented. 
-    Use at your own risk.</p>
 </footer>
 
 </body>
