--- a/my-website/index.html
+++ b/my-website/index.html
@@ -78,14 +78,12 @@
 
 <footer class="footer">
   <div class="footer-content">
-    <p>&copy; Dislaimer. The Website Server has no file on it. Only content from
-    third party websites and services is displayed on this website. We have
-    no control over or endorsement of any of the products, services
-    or material provided by this websites</p>
-    <div class="footer-links">
-      <a href="#">About Us</a>
-      <a href="#">Contact Us</a>
-    </div>
+    <p>
+      &copy; <span style="color: red; font-weight: bold;">Disclaimer</span>. The Website Server has no file on it. Only content from
+      third party websites and services is displayed on this website. We have
+      no control over or endorsement of any of the products, services
+      or material provided by this website.
+    </p>
   </div>
 </footer>
 
